// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagWall Rendering renders 1`] = `
<TagWall
  addButtonDisabled={false}
  addLabel="Add"
  className=""
  disable={false}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "0",
        "isSelected": true,
        "label": "Tag 1",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "1",
        "isSelected": true,
        "label": "Tag 2",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "2",
        "isSelected": true,
        "label": "Tag 3",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "3",
        "isSelected": false,
        "label": "Tag 4",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "4",
        "isSelected": false,
        "label": "Tag 5",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "5",
        "isSelected": false,
        "label": "Tag 6",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "6",
        "isSelected": false,
        "label": "Tag 7",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "7",
        "isSelected": false,
        "label": "Tag 8",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
    ]
  }
  label="Label"
  labels={Object {}}
  onAddButton={[Function]}
  onChange={[Function]}
>
  <section
    aria-label="Label"
    className="security--tag-wall"
  >
    <h2
      className="security--tag-wall__label"
    >
      Label
    </h2>
    <InteractiveTag
      example-attribute="example-value"
      id="0"
      isSelected={true}
      key="tag__0"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="0"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 1"
          >
            Tag 1
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="1"
      isSelected={true}
      key="tag__1"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="1"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 2"
          >
            Tag 2
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="2"
      isSelected={true}
      key="tag__2"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="2"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 3"
          >
            Tag 3
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="3"
      isSelected={false}
      key="tag__3"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default security--tag--interactive--removable"
        example-attribute="example-value"
        filter={false}
        id="3"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 4"
          >
            Tag 4
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="4"
      isSelected={false}
      key="tag__4"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default security--tag--interactive--removable"
        example-attribute="example-value"
        filter={false}
        id="4"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 5"
          >
            Tag 5
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="5"
      isSelected={false}
      key="tag__5"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default security--tag--interactive--removable"
        example-attribute="example-value"
        filter={false}
        id="5"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 6"
          >
            Tag 6
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="6"
      isSelected={false}
      key="tag__6"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default security--tag--interactive--removable"
        example-attribute="example-value"
        filter={false}
        id="6"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 7"
          >
            Tag 7
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="7"
      isSelected={false}
      key="tag__7"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default security--tag--interactive--removable"
        example-attribute="example-value"
        filter={false}
        id="7"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 8"
          >
            Tag 8
          </span>
          <button
            aria-label=""
            className="security--tag--interactive__button"
            onClick={[Function]}
          >
            <Icon
              className="security--tag--interactive__button__icon"
              height={null}
              path={null}
              renderIcon={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                }
              }
              size={20}
              viewBox="0 0 32 32"
              width={null}
            >
              <ForwardRef(Close16)
                aria-hidden="true"
                className="security--icon security--tag--interactive__button__icon"
                focusable={false}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
              >
                <Icon
                  aria-hidden="true"
                  className="security--icon security--tag--interactive__button__icon"
                  fill="currentColor"
                  focusable={false}
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-hidden={true}
                    className="security--icon security--tag--interactive__button__icon"
                    fill="currentColor"
                    focusable={false}
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </Icon>
              </ForwardRef(Close16)>
            </Icon>
          </button>
        </span>
      </Tag>
    </InteractiveTag>
    <Button
      disabled={false}
      kind="ghost"
      largeText={null}
      loading={false}
      onClick={[Function]}
      size="small"
      tabIndex={0}
      type="button"
    >
      <ForwardRef(Button)
        className="security--button"
        disabled={false}
        kind="ghost"
        onClick={[Function]}
        size="small"
        tabIndex={0}
        type="button"
      >
        <button
          className="security--button bx--btn bx--btn--sm bx--btn--ghost"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Add
        </button>
      </ForwardRef(Button)>
    </Button>
  </section>
</TagWall>
`;

exports[`TagWall Rendering renders the HTML of the node's subtree 1`] = `
<section
  aria-label="Label"
  class="security--tag-wall"
>
  <h2
    class="security--tag-wall__label"
  >
    Label
  </h2>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 1"
    >
      Tag 1
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 2"
    >
      Tag 2
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--removable security--tag--interactive--selected bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 3"
    >
      Tag 3
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 4"
    >
      Tag 4
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 5"
    >
      Tag 5
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 6"
    >
      Tag 6
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 7"
    >
      Tag 7
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <span
    class="bx--tag security--tag--interactive security--tag--interactive--default security--tag--interactive--removable bx--tag--gray"
    example-attribute="example-value"
  >
    <span
      class="bx--text-truncate--end"
      title="Tag 8"
    >
      Tag 8
    </span>
    <button
      aria-label=""
      class="security--tag--interactive__button"
    >
      <svg
        aria-hidden="true"
        class="security--icon security--tag--interactive__button__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </span>
  <button
    class="security--button bx--btn bx--btn--sm bx--btn--ghost"
    tabindex="0"
    type="button"
  >
    Add
  </button>
</section>
`;

exports[`TagWall Rendering renders the disabled variation 1`] = `
<TagWall
  addButtonDisabled={false}
  addLabel="Add"
  className=""
  disable={true}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "0",
        "isSelected": true,
        "label": "Tag 1",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "1",
        "isSelected": true,
        "label": "Tag 2",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "2",
        "isSelected": true,
        "label": "Tag 3",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "3",
        "isSelected": false,
        "label": "Tag 4",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "4",
        "isSelected": false,
        "label": "Tag 5",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "5",
        "isSelected": false,
        "label": "Tag 6",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "6",
        "isSelected": false,
        "label": "Tag 7",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "7",
        "isSelected": false,
        "label": "Tag 8",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
    ]
  }
  label="Label"
  labels={Object {}}
  onAddButton={[Function]}
  onChange={[Function]}
>
  <section
    aria-label="Label"
    className="security--tag-wall"
  >
    <h2
      className="security--tag-wall__label"
    >
      Label
    </h2>
    <InteractiveTag
      example-attribute="example-value"
      id="0"
      isSelected={true}
      key="tag__0"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="0"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 1"
          >
            Tag 1
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="1"
      isSelected={true}
      key="tag__1"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="1"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 2"
          >
            Tag 2
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="2"
      isSelected={true}
      key="tag__2"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="2"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 3"
          >
            Tag 3
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="3"
      isSelected={false}
      key="tag__3"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="3"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 4"
          >
            Tag 4
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="4"
      isSelected={false}
      key="tag__4"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="4"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 5"
          >
            Tag 5
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="5"
      isSelected={false}
      key="tag__5"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="5"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 6"
          >
            Tag 6
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="6"
      isSelected={false}
      key="tag__6"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="6"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 7"
          >
            Tag 7
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="7"
      isSelected={false}
      key="tag__7"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="7"
        type="gray"
      >
        <span
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          example-attribute="example-value"
          title={null}
        >
          <span
            className="bx--text-truncate--end"
            title="Tag 8"
          >
            Tag 8
          </span>
        </span>
      </Tag>
    </InteractiveTag>
    <Button
      disabled={true}
      kind="ghost"
      largeText={null}
      loading={false}
      onClick={[Function]}
      size="small"
      tabIndex={0}
      type="button"
    >
      <ForwardRef(Button)
        className="security--button"
        disabled={true}
        kind="ghost"
        onClick={[Function]}
        size="small"
        tabIndex={0}
        type="button"
      >
        <button
          className="security--button bx--btn bx--btn--sm bx--btn--ghost bx--btn--disabled"
          disabled={true}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Add
        </button>
      </ForwardRef(Button)>
    </Button>
  </section>
</TagWall>
`;
